--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ª<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    ola
+    <h1>Olivia Lizbeth Chairez Alba</h1>
 </body>
 </html>
