Mi primer lorem

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Olivia Lizbeth Chairez Alba</h1>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus neque
+      rem voluptate dicta, laborum modi pariatur aperiam officiis nulla.
+      Asperiores cum magnam dolor eius earum officiis magni recusandae totam
+      necessitatibus?
+    </p>
+  </body>
 </html>
